# react-native-s-a-m

./: .gitignore  .npmignore  CLAUDE.md  README.md  nitro.json  package.json  react-native-s-a-m.podspec  release-please-config.json  tsconfig.json
.github/workflows/: publish.yml  release-please.yml
.mason/: patternsRaw.json
android/: CMakeLists.txt  build.gradle
android/src/main/java/com/margelo/nitro/sam/: ReactNativeSAM.kt
cpp/: HybridSideFx.hpp
docs/: API.md  ARCHITECTURE.md  CONDITIONS.md  HOOKS.md  MFE.md  MISSILE_API.md  MISSILE_DESIGN.md  MISSILE_REQUIREMENTS.md  NETWORK.md  README.md  SECURE_STORAGE.md
docs/examples/: 01-basic-dispatch.ts  02-simple-saga.ts  03-auth-flow.ts  04-dynamic-watchers.ts  05-advanced-effects.ts  06-storage-watchers.ts
src/: SideFx.ts  constants.ts  hooks.ts  index.ts  mfe.ts  secure.ts  types.ts  useMFE.ts  useNetwork.ts  useSecure.ts
src/__tests__/: capabilities.test.ts
src/missile/: effects.ts  index.ts  types.ts
src/specs/: SideFx.nitro.ts
